--- a/login.html
+++ b/login.html
@@ -19,9 +19,19 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      <main class="signin">
+        <form>
+          <img class="img-fit" src="login.png">
+          <h1> Ingrese sus datos </h1>
+          <div>
+            <input id="name" type="text" class="datos" placeholder="Nombre de usuario" required>
+          </div>
+          <div>
+            <input id="pass" type="text" class="datos" placeholder="Contraseña" required>
+          </div>
+          <button id="boton" type="submit"> Ingresar </button>
+        </form>        
+      </main>  
     </div>
   </main>
   <footer class="text-muted">
