Cambios estéticos al login

--- a/login.html
+++ b/login.html
@@ -18,21 +18,23 @@
 
 <body>
   <main class="mt-5">
-    <div class="container">
-      <main class="signin">
-        <form>
-          <img class="img-fit" src="login.png">
-          <h1> Ingrese sus datos </h1>
-          <div>
-            <input id="name" type="text" class="datos" placeholder="Nombre de usuario" required>
-          </div>
-          <div>
-            <input id="pass" type="text" class="datos" placeholder="Contraseña" required>
-          </div>
-          <button id="boton" type="submit"> Ingresar </button>
-        </form>        
-      </main>  
-    </div>
+    <div class="signin">
+      <form>
+        <img class="img-fit" src="img/img_perfil.png">
+        <h1 id="h1-login"> Ingrese sus datos </h1>
+        <div>
+          <input id="name" type="text" class="datos" placeholder="Nombre de usuario" required>
+        </div>
+        <div>
+          <input id="pass" type="text" class="datos" placeholder="Contraseña" required>
+        </div>
+        <label id="check">
+          <input type="checkbox">
+          Recordarme
+        </label>
+        <button id="boton" type="submit"> Ingresar </button>
+      </form>        
+    </div>  
   </main>
   <footer class="text-muted">
     <div class="container">
