"Agregué ¿olvidaste tu contraseña? y crear cuenta"

--- a/login.html
+++ b/login.html
@@ -34,6 +34,8 @@
         </label>
         <button id="boton" type="submit"> Ingresar </button>
       </form>        
+      <a href="">¿Olvidaste tu contraseña?</a><br>
+      <a href="">Crear una cuenta</a>
     </div>  
   </main>
   <footer class="text-muted">
