"Cambié a type=password"

--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
           <input id="name" type="text" class="datos" placeholder="Nombre de usuario" required>
         </div>
         <div>
-          <input id="pass" type="text" class="datos" placeholder="Contraseña" required>
+          <input id="pass" type="password" class="datos" placeholder="Contraseña" required>
         </div>
         <label id="check">
           <input type="checkbox">
