--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
           <input type="checkbox">
           Recordarme
         </label>
-        <button id="boton" type="submit"> Ingresar </button>
+        <button id="boton" type="button"> Ingresar </button>
       </form>        
       <a href="">¿Olvidaste tu contraseña?</a><br>
       <a href="">Crear una cuenta</a>
