--- a/products.html
+++ b/products.html
@@ -10,6 +10,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <script src="js/products.js" defer></script>
 </head>
 
 <body>
@@ -39,7 +40,10 @@
   <main class="pb-5 container">
     <div class="container">
       <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+        <h4 class="alert-heading">Productos</h4>
+      </div>
+      <div class="listado" id="prod-list">
+          <p></p>
       </div>
     </div>
   </main>
