--- a/products.html
+++ b/products.html
@@ -39,29 +39,11 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div>
-        <h1 class="h1-multi"> Productos </h1>
-        <h2 class="h2-multi"> Listado de autos </h2>
+      <div class="alert alert-danger text-center" role="alert">
+        <h4 class="alert-heading">Productos</h4>
       </div>
-      <div class="info-auto">
-        <label> Acá va info del producto </label>
-        <img class="img-left" src="img/car1.jpg">
-      </div>
-      <div class="info-auto">
-        <label> Acá va info del producto </label>
-        <img class="img-left" src="img/car1.jpg">
-      </div>
-      <div class="info-auto">
-        <label> Acá va info del producto </label>
-        <img class="img-left" src="img/car1.jpg">
-      </div>
-      <div class="info-auto">
-        <label> Acá va info del producto </label>
-        <img class="img-left" src="img/car1.jpg">
-      </div>
-      <div class="info-auto">
-        <label> Acá va info del producto </label>
-        <img class="img-left" src="img/car1.jpg">
+      <div class="listado" id="prod-list">
+          <p></p>
       </div>
     </div>
   </main>
