--- a/products.html
+++ b/products.html
@@ -39,11 +39,11 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Productos</h4>
+      <div style="text-align: center;">
+        <h1>Productos</h1>
       </div>
       <div class="listado" id="prod-list">
-          <p></p>
+
       </div>
     </div>
   </main>
