"Cambios en h1: Productos"

--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
   <main class="pb-5 container">
     <div class="container">
       <div style="text-align: center;">
-        <h1>Productos</h1>
+        <h1>PRODUCTOS</h1>
       </div>
       <div class="listado" id="prod-list">
 
