--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
   <main class="pb-5 container">
     <div class="container">
       <div style="text-align: center;">
-        <h2>Productos</h2>
+        <h1>PRODUCTOS</h1>
         <p class="lead">Verás aquí todos los productos de la categoría Autos</p>
       </div>
       <div class="listado" id="prod-list">
