--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     <div class="signin">
       <form>
         <img class="img-fit" src="img/img_perfil.png">
-        <h1 id="h1-login"> Ingrese sus datos </h1>
+        <h1 id="h1-login"> LOGIN </h1>
         <div>
           <input id="name" type="text" class="datos" placeholder="Nombre de usuario" required>
         </div>
