--- a/products.html
+++ b/products.html
@@ -10,6 +10,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <script src="js/products.js" defer></script>
 </head>
 
 <body>
@@ -38,8 +39,12 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div style="text-align: center;">
+        <h1>PRODUCTOS</h1>
+        <p class="lead" id="descripcion">Verás aquí todos los productos de la categoría Autos</p>
+      </div>
+      <div class="listado" id="prod-list">
+
       </div>
     </div>
   </main>
