--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="css/login.css" rel="stylesheet">
   <style>
     body {
       background-color: rgb(248, 249, 250);
@@ -18,11 +19,25 @@
 
 <body>
   <main class="mt-5">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
+    <div class="signin">
+      <form>
+        <img class="img-fit" src="img/img_perfil.png">
+        <h1 id="h1-login"> LOGIN </h1>
+        <div>
+          <input id="name" type="text" class="datos" placeholder="Nombre de usuario" required>
+        </div>
+        <div>
+          <input id="pass" type="password" class="datos" placeholder="Contraseña" required>
+        </div>
+        <label id="check">
+          <input type="checkbox">
+          Recordarme
+        </label>
+        <button id="boton" type="button"> Ingresar </button>
+      </form>        
+      <a href="">¿Olvidaste tu contraseña?</a><br>
+      <a href="">Crear una cuenta</a>
+    </div>  
   </main>
   <footer class="text-muted">
     <div class="container">
