--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div style="text-align: center;">
         <h1>PRODUCTOS</h1>
-        <p class="lead" id="descripcion">Verás aquí todos los productos de la categoría Autos</p>
+        <p class="lead" id="descripcion">Verás aquí todos los productos de la categoría <label id = "titulo"> Autos </label> </p>
       </div>
       <div class="listado" id="prod-list">
 
