Anda barra y filtros

--- a/products.html
+++ b/products.html
@@ -43,6 +43,10 @@
         <h1>PRODUCTOS</h1>
         <p class="lead" id="descripcion">Verás aquí todos los productos de la categoría <label id = "titulo"> Autos </label> </p>
       </div>
+      <div>
+        <input type="text" id="barra" placeholder="Busque el producto que desea">
+      </div>
+      <br>
       <div class="container">
         <div class="row">
           <div class="col text-end">
