--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a href="" class="nav-link" id="userName"></a>
           </li>
         </ul>
       </div>
