--- a/product-info.html
+++ b/product-info.html
@@ -39,6 +39,16 @@
   <main>
     <div class="container" id="prod-info">
     </div>
+    <div id="comentarios">
+      <h3>Comentarios</h3>
+      <ul id="lista">
+      </ul>
+      <div>
+        <textarea type="text" id="caja">
+        </textarea>
+        <button id="send">Enviar comentario</button>
+      </div>
+    </div>
   </main>
   <footer class="text-muted">
     <div class="container">
