"estilo caja de comentarios"

--- a/product-info.html
+++ b/product-info.html
@@ -39,13 +39,13 @@
   <main>
     <div class="container" id="prod-info">
     </div>
-    <div id="comentarios">
+    <div id="comentarios" class="container">
       <h3>Comentarios</h3>
       <ul id="lista">
       </ul>
       <div>
         <textarea type="text" id="caja">
-        </textarea>
+        </textarea><br>
         <button id="send">Enviar comentario</button>
       </div>
     </div>
