--- a/product-info.html
+++ b/product-info.html
@@ -48,20 +48,17 @@
         <label> Tu opinión </label>
         <textarea type="text" id="caja">
         </textarea><br>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Puntuación
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item">0</a></li>
-            <li><a class="dropdown-item">1</a></li>
-            <li><a class="dropdown-item">2</a></li>
-            <li><a class="dropdown-item">3</a></li>
-            <li><a class="dropdown-item">4</a></li>
-            <li><a class="dropdown-item">5</a></li>
-          </ul>
-        </div>
-        <br>
+        <label>Tu puntuación:</label>
+        <br> <br>
+        <select id="points">
+          <option>0</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        <br> <br>
         <button id="send">Enviar comentario</button>
       </div>
     </div>
