--- a/product-info.html
+++ b/product-info.html
@@ -62,6 +62,12 @@
         <button id="send">Enviar comentario</button>
       </div>
     </div>
+    <br>
+    <div class="container">
+      <h2> Productos relacionados </h2>
+      <div class="container" id="related">
+      </div>
+    </div>
   </main>
   <footer class="text-muted">
     <div class="container">
