--- a/product-info.html
+++ b/product-info.html
@@ -40,7 +40,7 @@
     <div class="container" id="prod-info">  
 
     </div>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide clase-carrusel" data-bs-ride="carousel">
       <div class="carousel-inner" id="imgs">
         
       </div>
@@ -53,6 +53,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <br> <br>
     <div id="comentarios" class="container">
       <h2>Comentarios</h2>
       <ul id="lista" ul class="list-group">
