--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             </ul>
           </li>
         </ul>
+        <div>
+                    <button class="switchDark active" id="switch">
+                        <span><i class='bx bx-sun' ></i></span>
+                        <span><i class='bx bx-moon' ></i></span>
+                      </div>
+                      
+        </div>
       </div>
     </div>
   </nav>
