--- a/sell.html
+++ b/sell.html
@@ -33,7 +33,12 @@
           </li>
         </ul>
       </div>
-    </div>
+          <div>
+            <button class="switchDark active" id="switch">
+              <span><i class='bx bx-sun' ></i></span>
+              <span><i class='bx bx-moon' ></i></span>
+          </div>
+      </div>
   </nav>
   <div class="container">
     <div class="text-center p-4">
@@ -225,6 +230,7 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/sell.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
