--- a/cart.html
+++ b/cart.html
@@ -33,6 +33,11 @@
           </li>
         </ul>
       </div>
+          <div>
+            <button class="switchDark active" id="switch">
+              <span><i class='bx bx-sun' ></i></span>
+              <span><i class='bx bx-moon' ></i></span>
+          </div>
     </div>
   </nav>
   <main>
@@ -61,6 +66,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
