--- a/categories.html
+++ b/categories.html
@@ -34,6 +34,12 @@
           </li>
         </ul>
       </div>
+          <div>
+            <button class="switchDark active" id="switch">
+              <span><i class='bx bx-sun' ></i></span>
+              <span><i class='bx bx-moon' ></i></span>
+          </div>
+          
     </div>
   </nav>
   <main class="pb-5">
@@ -100,6 +106,8 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/categories.js"></script>
+  <script src="js/index.js"></script>
+
 </body>
 
 </html>
