--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'> 
+  <link href="darkmode.css" rel="stylesheet">
+<script src="darkmode.js"></script>
 </head>
 
 <body>
@@ -44,8 +47,7 @@
                     <button class="switchDark active" id="switch">
                         <span><i class='bx bx-sun' ></i></span>
                         <span><i class='bx bx-moon' ></i></span>
-                      </div>
-                      
+                      </div>                   
         </div>
       </div>
     </div>
