--- a/products.html
+++ b/products.html
@@ -10,7 +10,10 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'> 
+  <link href="darkmode.css" rel="stylesheet">
   <script src="js/products.js" defer></script>
+  
 </head>
 
 <body>
