--- a/cart.html
+++ b/cart.html
@@ -49,10 +49,27 @@
     </div>
   </nav>
   <main>
+    <div class="container" style="text-align: center;">
+      <h1>Carrito de compras</h1>
+    </div>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      <h2>Artículos a comprar</h2>
+    </div>
+    <div class="container">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Costo</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Subtotal</th>
+          </tr>
+        </thead>
+        <tbody id="tablaProd" class="table-group-divider">
+
+        </tbody>
+      </table>
     </div>
   </main>
   <footer class="text-muted">
