--- a/product-info.html
+++ b/product-info.html
@@ -50,6 +50,12 @@
     </div>
   </nav>
   <main>
+
+
+   <!--  Funcionalidad aniadir a carrito -->
+   <button onclick="aniadircarrito(productsArray)">Al carrito</button>
+    <!--  Funcionalidad aniadir a carrito fin -->
+
     <div class="container" id="prod-info">  
 
     </div>
