--- a/cart.html
+++ b/cart.html
@@ -72,6 +72,50 @@
       </table>
     </div>
   </main>
+
+      <div class="justify-content-md-center">
+        <div class="col">
+          <div class="row">
+              <div class="d-block col-6">
+                <form class="needs-validation" id="buy-form">
+                <h4 class="mt-5">Tipo de envío</h4>
+                <div class="custom-control custom-radio">
+                  <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" checked=""
+                    required="">
+                  <label class="custom-control-label" for="premiumradio">Premium (2-5 días) - Costo del 15% sobre el
+                    subtotal</label>
+                </div>
+                <div class="custom-control custom-radio">
+                  <input id="expressradio" name="publicationType" type="radio" class="custom-control-input" required="">
+                  <label class="custom-control-label" for="expressradio">Express (5-8 días) - Costo del 7% sobre el
+                    subtotal</label>
+                </div>
+                <div class="custom-control custom-radio">
+                  <input id="standardradio" name="publicationType" type="radio" class="custom-control-input" required="">
+                  <label class="custom-control-label" for="standardradio">Standard (12-15 días) - Costo del 5% sobre el
+                    subtotal</label>
+                </div>
+              </div>
+              
+              <h4 class="mt-5">Dirección de envío</h4>
+              <div class="row">
+                <div class="form-group col-6">
+                  <label for="street">Calle</label>
+                  <input type="text" class="form-control" id="street" placeholder="" value="" required>
+                </div>
+                <div class="form-group col-6">
+                  <label for="number">Número</label>
+                  <input type="text" class="form-control" id="number" placeholder="" value="" required>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group col-6">
+                  <label for="corner">Esquina</label>
+                  <input type="text" class="form-control" id="corner" placeholder="" value="" required>
+                </div>
+              </div>
+            </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
