--- a/product-info.html
+++ b/product-info.html
@@ -49,7 +49,7 @@
           </div>
     </div>
   </nav>
-  <main>
+  <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
     <div class="container" id="prod-info">  
 
     </div>
