--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
           </div>
     </div>
   </nav>
-  <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
+  <main class="container">
     <div class="container">
       <div style="text-align: center;">
         <h1>PRODUCTOS</h1>
