--- a/product-info.html
+++ b/product-info.html
@@ -50,7 +50,7 @@
     </div>
   </nav>
   <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
-    <div class="container" id="prod-info">  
+    <div class="container col-md-9 col-xl-8" id="prod-info">  
 
     </div>
     <div id="carouselExampleControls" class="carousel slide clase-carrusel" data-bs-ride="carousel">
@@ -67,7 +67,7 @@
       </button>
     </div>
     <br> <br>
-    <div id="comentarios" class="container">
+    <div id="comentarios" class="container col-md-9 col-xl-8">
       <h2>Comentarios</h2>
       <ul id="lista" ul class="list-group">
       </ul>
@@ -91,7 +91,7 @@
       </div>
     </div>
     <br>
-    <div class="container">
+    <div class="container col-md-9 col-xl-8">
       <h2> Productos relacionados </h2>
       <div class="container" id="related">
       </div>
