--- a/cart.html
+++ b/cart.html
@@ -73,7 +73,7 @@
     </div>
   </main>
 
-      <div class="justify-content-md-center">
+      <div class="container justify-content-md-center">
         <div class="col">
           <div class="row">
               <div class="d-block col-6">
