--- a/cart.html
+++ b/cart.html
@@ -77,22 +77,19 @@
       <div class="container justify-content-md-center">
         <div class="col">
           <div class="row">
-              <div class="d-block col-6">
-                <form class="needs-validation" id="buy-form">
                 <h4 class="mt-5">Tipo de envío</h4>
                 <div class="custom-control custom-radio">
-                  <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" checked=""
-                    required="">
+                  <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" checked="">
                   <label class="custom-control-label" for="premiumradio">Premium (2-5 días) - Costo del 15% sobre el
                     subtotal</label>
-                </div>
+                  </div>
                 <div class="custom-control custom-radio">
-                  <input id="expressradio" name="publicationType" type="radio" class="custom-control-input" required="">
+                  <input id="expressradio" name="publicationType" type="radio" class="custom-control-input">
                   <label class="custom-control-label" for="expressradio">Express (5-8 días) - Costo del 7% sobre el
                     subtotal</label>
                 </div>
                 <div class="custom-control custom-radio">
-                  <input id="standardradio" name="publicationType" type="radio" class="custom-control-input" required="">
+                  <input id="standardradio" name="publicationType" type="radio" class="custom-control-input">
                   <label class="custom-control-label" for="standardradio">Standard (12-15 días) - Costo del 5% sobre el
                     subtotal</label>
                 </div>
@@ -102,17 +99,17 @@
               <div class="row">
                 <div class="form-group col-6">
                   <label for="street">Calle</label>
-                  <input type="text" class="form-control" id="street" placeholder="" value="" required>
+                  <input type="text" class="form-control" id="street" >
                 </div>
                 <div class="form-group col-6">
                   <label for="number">Número</label>
-                  <input type="text" class="form-control" id="number" placeholder="" value="" required>
+                  <input type="text" class="form-control" id="number">
                 </div>
               </div>
               <div class="row">
                 <div class="form-group col-6">
                   <label for="corner">Esquina</label>
-                  <input type="text" class="form-control" id="corner" placeholder="" value="" required>
+                  <input type="text" class="form-control" id="corner">
                 </div>
               </div>
             </div>
