--- a/cart.html
+++ b/cart.html
@@ -2,205 +2,116 @@
 <html lang="es">
 
 <head>
-  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  	<title>eMercado - Todo lo que busques está aquí</title>
-  	<link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  	<link href="css/bootstrap.min.css" rel="stylesheet">
-  	<link href="css/font-awesome.min.css" rel="stylesheet">
-  	<link href="css/styles.css" rel="stylesheet">
-  	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'> 
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>eMercado - Todo lo que busques está aquí</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'> 
 </head>
 
 <body>
-  	<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    	<div class="container">
-      		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        	aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        		<span class="navbar-toggler-icon"></span>
-      		</button>
-      	<div class="collapse navbar-collapse" id="navbarNav">
-        	<ul class="navbar-nav w-100 justify-content-between">
-          		<li class="nav-item">
-            		<a class="nav-link" href="index.html">Inicio</a>
-          		</li>
-          		<li class="nav-item">
-            		<a class="nav-link" href="categories.html">Categorías</a>
-          		</li>
-          		<li class="nav-item">
-            		<a class="nav-link" href="sell.html">Vender</a>
-          		</li>
-			</ul>
-          	<div class="dropdown">
-            	<li class="nav-item">
-              	<button class="btn btn-secondary dropdown-toggle, nav-link" id="userName" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-              	<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                	<li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
-                	<li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
-                	<li><a class="dropdown-item" href="login.html" id="cerrar-sesion">Cerrar sesión</a></li>
-				</ul>
-            </div>
-      	</div>
-        <div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav w-100 justify-content-between">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="categories.html">Categorías</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sell.html">Vender</a>
+          </li>
+          <div class="dropdown">
+            <li class="nav-item">
+              <button class="btn btn-secondary dropdown-toggle, nav-link" id="userName" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+                <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="login.html" id="cerrar-sesion">Cerrar sesión</a></li>
+              </div>
+          </li>
+        </ul>
+      </div>
+          <div>
             <button class="switchDark active" id="switch">
-              	<span><i class='bx bx-sun' ></i></span>
-              	<span><i class='bx bx-moon' ></i></span>
-        </div>
+              <span><i class='bx bx-sun' ></i></span>
+              <span><i class='bx bx-moon' ></i></span>
+          </div>
     </div>
-  	</nav>
-  	<main>
-    	<div class="container" style="text-align: center;">
-      		<h1>Carrito de compras</h1>
-    	</div>
-    	<div class="container">
-      		<h2>Artículos a comprar</h2>
-    	</div>
-    	<div class="container">
-      	<table class="table">
-        	<thead>
-          	<tr>
+  </nav>
+  <main>
+    <div class="container" style="text-align: center;">
+      <h1>Carrito de compras</h1>
+    </div>
+    <div class="container">
+      <h2>Artículos a comprar</h2>
+    </div>
+    <div class="container">
+      <table class="table">
+        <thead>
+          <tr>
             <th scope="col"></th>
             <th scope="col">Nombre</th>
             <th scope="col">Costo</th>
             <th scope="col">Cantidad</th>
             <th scope="col">Subtotal</th>
-			<th></th>
-          	</tr>
-        	</thead>
+          </tr>
+        </thead>
         <tbody id="tablaProd" class="table-group-divider">
+
         </tbody>
-      	</table>
-     	<hr>
-    	</div>
-  	</main>
-    <div class="container justify-content-md-center">
+      </table>
+    </div>
+  </main>
+
+      <div class="container justify-content-md-center">
         <div class="col">
-          	<div class="row">
+          <div class="row">
                 <h4 class="mt-5">Tipo de envío</h4>
                 <div class="custom-control custom-radio">
-                  	<input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" autocomplete="off">
-                  	<label class="custom-control-label" for="premiumradio">Premium (2-5 días) - Costo del 15% sobre el
+                  <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" checked="">
+                  <label class="custom-control-label" for="premiumradio">Premium (2-5 días) - Costo del 15% sobre el
+                    subtotal</label>
+                  </div>
+                <div class="custom-control custom-radio">
+                  <input id="expressradio" name="publicationType" type="radio" class="custom-control-input">
+                  <label class="custom-control-label" for="expressradio">Express (5-8 días) - Costo del 7% sobre el
                     subtotal</label>
                 </div>
                 <div class="custom-control custom-radio">
-                  	<input id="expressradio" name="publicationType" type="radio" class="custom-control-input" autocomplete="off">
-                  	<label class="custom-control-label" for="expressradio">Express (5-8 días) - Costo del 7% sobre el
+                  <input id="standardradio" name="publicationType" type="radio" class="custom-control-input">
+                  <label class="custom-control-label" for="standardradio">Standard (12-15 días) - Costo del 5% sobre el
                     subtotal</label>
                 </div>
-                <div class="custom-control custom-radio">
-                  	<input id="standardradio" name="publicationType" type="radio" class="custom-control-input" autocomplete="off">
-                  	<label class="custom-control-label" for="standardradio">Standard (12-15 días) - Costo del 5% sobre el
-                    subtotal</label>
-				</div>
-			</div>
-            <h4 class="mt-5">Dirección de envío</h4>
-            <div class="row">
+              </div>
+              
+              <h4 class="mt-5">Dirección de envío</h4>
+              <div class="row">
                 <div class="form-group col-6">
-                  	<label for="street">Calle</label>
-                  	<input type="text" class="form-control" id="street" autocomplete="off">
+                  <label for="street">Calle</label>
+                  <input type="text" class="form-control" id="street" >
                 </div>
                 <div class="form-group col-6">
-                  	<label for="number">Número</label>
-                  	<input type="text" class="form-control" id="number" autocomplete="off">
+                  <label for="number">Número</label>
+                  <input type="text" class="form-control" id="number">
                 </div>
-            </div>
-              	<div class="row">
-                	<div class="form-group col-6">
-                 	<label for="corner">Esquina</label>
-                  	<input type="text" class="form-control" id="corner" autocomplete="off">
+              </div>
+              <div class="row">
+                <div class="form-group col-6">
+                  <label for="corner">Esquina</label>
+                  <input type="text" class="form-control" id="corner">
                 </div>
+              </div>
             </div>
-        </div>
-		<br> <hr>
-	</div>
-		<div class="container">
-			<h4 class="mt-5">Costos</h4>
-			<ul class="list-group">
-				<li class="list-group-item d-flex justify-content-between align-items-start">
-				  	<div class="ms-2 me-auto">
-						<div class="fw-bold">Subtotal</div>
-						Costo unitario del producto por cantidad
-				  	</div>
-				  	<span id="subtotal">USD 0</span>
-				</li>
-				<li class="list-group-item d-flex justify-content-between align-items-start">
-				  	<div class="ms-2 me-auto">
-						<div class="fw-bold">Costo de envío</div>
-						Según el tipo de envío
-				  	</div>
-				  	<span id="envio">USD 0</span>
-				</li>
-				<li class="list-group-item d-flex justify-content-between align-items-start">
-				  	<div class="ms-2 me-auto">
-						<div class="fw-bold">Total ($)</div>
-				  	</div>
-				  	<span id="total">USD 0</span>
-				</li>
-			</ul>
-			<br> <hr>
-		</div>
-		<div class="container">
-			<h4 class="mt-5">Forma de pago</h4>
-			<br>
-			<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-			Seleccionar forma de pago
-  			</button>
-  			<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-				<div class="modal-dialog">
-	  				<div class="modal-content">
-						<div class="modal-header">
-		  					<h2 class="modal-title fs-5" id="exampleModalLabel">Forma de pago</h2>
-		  					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-						</div>
-					<div class="modal-body">
-						<div class="row">
-							<div class="custom-control custom-radio">
-								<input id="creditcard" name="radiomodal" type="radio" class="custom-control-input" autocomplete="off">
-								<label class="custom-control-label" for="creditcard"> Tarjeta de crédito </label>								
-						  	</div>
-							<div class="form-group col-6">
-								<label for="numbercard">Número de tarjeta</label>
-								<input type="text" class="form-control" id="numbercard" autocomplete="off">
-							</div>
-							<div class="form-group col-6">
-								<label for="codecard">Código de seguridad</label>
-								<input type="text" class="form-control" id="codecard" autocomplete="off">
-							</div>
-						</div>
-						<div class="row">
-							<div class="form-group col-6">
-								<label for="datecard">Vencimiento (MM/AA)</label>
-								<input type="text" class="form-control" id="datecard" autocomplete="off">
-							</div>
-						</div>
-						<div class="custom-control custom-radio">
-							<input id="bank" name="radiomodal" type="radio" class="custom-control-input" autocomplete="off">
-							<label class="custom-control-label" for="bank"> Transferencia bancaria </label>													
-						</div>
-						<div class="form-group col-6">
-							<label for="numberbank">Número de cuenta</label>
-							<input type="text" class="form-control" id="numberbank" autocomplete="off">
-					  	</div>
-					</div>
-					<div class="modal-footer">
-		  				<button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
-					</div>
-	  			</div>
-			</div>
-  		</div>
-		<hr>
-		<div>
-			<button id="finish" type="button" class="btn btn-primary" style="width: 100%;">Finalizar la compra</button>
-		</div>
-	</div>
-	<div id="successmsg" class="alert alert-success alert-dismissible fade show" role="alert" hidden>
-		¡Has comprado con éxito!
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-	</div>
-	<div id="failmsg" class="alert alert-danger alert-dismissible fade show" role="alert" hidden>
-		Faltan completar datos.
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-	</div>
 
   <footer class="text-muted">
     <div class="container">
