--- a/cart.html
+++ b/cart.html
@@ -41,11 +41,11 @@
           </li>
         </ul>
       </div>
-          <div>
-            <button class="switchDark active" id="switch">
-              <span><i class='bx bx-sun' ></i></span>
-              <span><i class='bx bx-moon' ></i></span>
-          </div>
+        <div>
+          <button class="switchDark active" id="switch">
+            <span><i class='bx bx-sun' ></i></span>
+            <span><i class='bx bx-moon' ></i></span>
+        </div>
     </div>
   </nav>
   <main>
@@ -68,52 +68,50 @@
           </tr>
         </thead>
         <tbody id="tablaProd" class="table-group-divider">
-
         </tbody>
       </table>
+      <hr>
+    </div>
+    <div class="container justify-content-md-center">
+      <div class="col">
+        <div class="row">
+          <h4 class="mt-5">Tipo de envío</h4>
+          <div class="custom-control custom-radio">
+            <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" autocomplete="off">
+            <label class="custom-control-label" for="premiumradio">Premium (2-5 días) - Costo del 15% sobre el
+            subtotal</label>
+          </div>
+          <div class="custom-control custom-radio">
+            <input id="expressradio" name="publicationType" type="radio" class="custom-control-input" autocomplete="off">
+            <label class="custom-control-label" for="expressradio">Express (5-8 días) - Costo del 7% sobre el
+            subtotal</label>
+          </div>
+          <div class="custom-control custom-radio">
+            <input id="standardradio" name="publicationType" type="radio" class="custom-control-input" autocomplete="off">
+            <label class="custom-control-label" for="standardradio">Standard (12-15 días) - Costo del 5% sobre el
+            subtotal</label>
+          </div>
+        </div>
+        <h4 class="mt-5">Dirección de envío</h4>
+        <div class="row">
+          <div class="form-group col-6">
+            <label for="street">Calle</label>
+            <input type="text" class="form-control" id="street" autocomplete="off">
+          </div>
+          <div class="form-group col-6">
+            <label for="number">Número</label>
+            <input type="text" class="form-control" id="number" autocomplete="off">
+          </div>
+        </div>
+        <div class="row">
+          <div class="form-group col-6">
+            <label for="corner">Esquina</label>
+            <input type="text" class="form-control" id="corner" autocomplete="off">
+          </div>
+        </div>
+      </div>
     </div>
   </main>
-
-      <div class="container justify-content-md-center">
-        <div class="col">
-          <div class="row">
-                <h4 class="mt-5">Tipo de envío</h4>
-                <div class="custom-control custom-radio">
-                  <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" checked="">
-                  <label class="custom-control-label" for="premiumradio">Premium (2-5 días) - Costo del 15% sobre el
-                    subtotal</label>
-                  </div>
-                <div class="custom-control custom-radio">
-                  <input id="expressradio" name="publicationType" type="radio" class="custom-control-input">
-                  <label class="custom-control-label" for="expressradio">Express (5-8 días) - Costo del 7% sobre el
-                    subtotal</label>
-                </div>
-                <div class="custom-control custom-radio">
-                  <input id="standardradio" name="publicationType" type="radio" class="custom-control-input">
-                  <label class="custom-control-label" for="standardradio">Standard (12-15 días) - Costo del 5% sobre el
-                    subtotal</label>
-                </div>
-              </div>
-              
-              <h4 class="mt-5">Dirección de envío</h4>
-              <div class="row">
-                <div class="form-group col-6">
-                  <label for="street">Calle</label>
-                  <input type="text" class="form-control" id="street" >
-                </div>
-                <div class="form-group col-6">
-                  <label for="number">Número</label>
-                  <input type="text" class="form-control" id="number">
-                </div>
-              </div>
-              <div class="row">
-                <div class="form-group col-6">
-                  <label for="corner">Esquina</label>
-                  <input type="text" class="form-control" id="corner">
-                </div>
-              </div>
-            </div>
-
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
