--- a/cart.html
+++ b/cart.html
@@ -122,14 +122,15 @@
           <div class="form-group col-6">
             <label for="corner">Esquina</label>
             <input type="text" class="form-control" id="corner" autocomplete="off">
-            <div class="invalid-feedback" id="cornerInvalid">Ingresa una esquina</div>
+            <div class="invalid-feedback" id="cornerInvalid">Ingresa una esquina</div> <br>
           </div>
         </div>
+        
 
-        <button type="button" onclick="validateForm()">comprar</button>
+        <button type="button" class="btn btn-dark btn-lg" onclick="validateForm()">comprar</button>
 
         <div class="popup" id="successPopup">
-          ¡Haz compado con exito! 
+          ¡Has compado con éxito! 
       </div>
 
 
