--- a/cart.html
+++ b/cart.html
@@ -204,7 +204,7 @@
                   </div>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Guardar</button>
                 </div>
               </div>
             </div>
