--- a/my-profile.html
+++ b/my-profile.html
@@ -64,10 +64,49 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+
+
+<!--     MAQUETADO DE PROFILE INFO -->
+
+<h2 style="text-align: center; margin: 5% 0 5% 0;">Perfil</h2>
+
+<hr>
+
+<div class="profileinfodiv">
+  <div class="profitem">
+  <label for="nombre">Primer Nombre</label>
+  <input type="text" id="profnombre" name="nombre">
+</div>
+
+  <div class="profitem">
+  <label for="segundonombre">Segundo Nombre</label>
+  <input type="text" id="profsegundonombre" name="segundonombre">
+</div>
+
+  <div class="profitem">
+  <label for="apellido">Primer Apellido*</label>
+  <input type="text" id="profapellido" name="apellido">
+</div>
+
+  <div class="profitem">
+  <label for="segundoapellido">Segundo Apellido</label>
+  <input type="text" id="profsegundoapellido" name="segundoapellido">
+</div>
+
+  <div class="profitem">
+  <label for="email">E-mail</label>
+  <input type="text" id="profemail" name="email">
+</div>
+
+  <div class="profitem">
+  <label for="numerorelef">Telefono de Contacto</label>
+  <input type="text" id="profnumero" name="numerotelef">
+</div>
+</div>
+<hr>
+<!--     FIN MAQUETADO -->
+
+
     </div>
   </main>
   <footer class="text-muted">
