--- a/my-profile.html
+++ b/my-profile.html
@@ -80,7 +80,7 @@
 <div class="profileinfodiv">
   <div class="profitem">
   <label for="nombre">Primer Nombre</label>
-  <input type="text" class="form-control" id="profnombre" name="nombre">
+  <input type="text" class="form-control" id="profnombre" name="nombre" required>
 </div>
 
 
@@ -91,7 +91,7 @@
 
   <div class="profitem">
   <label for="apellido">Primer Apellido*</label>
-  <input type="text" id="profapellido" class="form-control"name="apellido">
+  <input type="text" id="profapellido" class="form-control"name="apellido" required>
 </div>
 
   <div class="profitem">
@@ -101,7 +101,7 @@
 
   <div class="profitem">
   <label for="email">E-mail</label>
-  <input type="text" id="profemail" class="form-control" name="email">
+  <input type="text" id="profemail" class="form-control" name="email" required>
 </div>
 
   <div class="profitem">
