--- a/my-profile.html
+++ b/my-profile.html
@@ -72,64 +72,52 @@
   <h1 id="titulo-perfil">Perfil</h1>
     <div class="col-md-4 offset-md-8">
       <img src="./img/avatar.png" id="img-perfil" id="avatar" alt="foto de perfil">
-  </div>
-
-<hr>
-
-<div id="campos">
-<div class="profileinfodiv">
-  <div class="profitem">
-  <label for="nombre">Primer Nombre</label>
-  <input type="text" class="form-control" id="profnombre" name="nombre" required>
-</div>
-
-
-  <div class="profitem">
-  <label for="segundonombre">Segundo Nombre</label>
-  <input type="text" id="profsegundonombre" class="form-control" name="segundonombre">
-</div>
-
-  <div class="profitem">
-  <label for="apellido">Primer Apellido*</label>
-  <input type="text" id="profapellido" class="form-control"name="apellido" required>
-</div>
-
-  <div class="profitem">
-  <label for="segundoapellido">Segundo Apellido</label>
-  <input type="text" id="profsegundoapellido" class="form-control" name="segundoapellido">
-</div>
-
-  <div class="profitem">
-  <label for="email">E-mail</label>
-  <input type="text" id="profemail" class="form-control" name="email" required>
-</div>
-
-  <div class="profitem">
-  <label for="numerorelef">Telefono de Contacto</label>
-  <input type="text" id="profnumero" class="form-control" name="numerotelef">
-</div>
-
-  <div class="row">
-        <div id="upload-picture">
+    </div>
+  <hr>
+  <form id="form" method="get" class="needs-validation" novalidate>
+    <div id="campos">
+      <div class="profileinfodiv">
+        <div class="profitem">
+          <label for="nombre">Primer nombre*</label>
+          <input type="text" class="form-control" id="profnombre" name="nombre" required>
+        </div>
+        <div class="profitem">
+          <label for="segundonombre">Segundo nombre</label>
+          <input type="text" id="profsegundonombre" class="form-control" name="segundonombre">
+        </div>
+        <div class="profitem">
+          <label for="apellido">Primer apellido*</label>
+          <input type="text" id="profapellido" class="form-control"name="apellido" required>
+        </div>
+        <div class="profitem">
+          <label for="segundoapellido">Segundo Apellido</label>
+          <input type="text" id="profsegundoapellido" class="form-control" name="segundoapellido">
+        </div>
+        <div class="profitem">
+          <label for="email">E-mail*</label>
+          <input type="email" id="profemail" class="form-control" name="email" required>
+        </div>
+        <div class="profitem">
+          <label for="numerorelef">Teléfono de Contacto</label>
+          <input type="text" id="profnumero" class="form-control" name="numerotelef">
+        </div>
+        <div class="row">
+          <div id="upload-picture">
             <label for="profile" class="form-label">Imagen de perfil</label>
             <input id="subir-img" type="file" name="profile" class="form-control" style="width: 400px;">
+          </div>
         </div>
-       
-  
-</div>
-
-</div>
-
-</div>
-<hr>
-
-<div class="container">
-  <button class="btn btn-primary" id="guardar-cambios">Guardar cambios</button>
-</div>
-<!--     FIN MAQUETADO -->
-
-
+      </div>
     </div>
+    <hr>
+    <div class="container">
+      <button type="submit" class="btn btn-primary" id="guardar-cambios">Guardar cambios</button>
+    </div>
+  </form>
+</div>
+
+<!-- FIN MAQUETADO -->
+  </div>
   </main>
   <footer class="text-muted">
     <div class="container">
